add second header

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -7,6 +7,8 @@ published: true
 ---
 ## November 25, 2025
 
+### Tracing for query performance diagnosis
+
 [Tracing](https://docs.chalk.ai/docs/tracing) now provides full visibility into how queries execute inside Chalk.
 
 Each resolver and model call is instrumented and timed, allowing teams to pinpoint slow spans, identify inefficient SQL,
