--- a/changelog.mdx
+++ b/changelog.mdx
@@ -17,7 +17,7 @@ and understand query behavior end to end.
 Trace data is surfaced directly in the dashboard, so engineers can drill into individual spans to view execution time,
 rows returned, and linked data source details.
 
-Traces can be enabled per query using CLI or ChalkClient() or configured to
+Traces can be enabled per query using CLI, `ChalkClient()`, or configured to
 sample automatically in production for continuous monitoring.
 
 ![Example Query Trace](/img/changelog-2025_11_25-query_trace.png)
