--- a/integrations.mdx
+++ b/integrations.mdx
@@ -94,6 +94,7 @@ into SQL queries for more efficient data fetching.
 
 **Azure:**
 
+- [SQL Server / Azure SQL Database](/docs/mssql)
 - Database for PostgreSQL
 - Database for MySQL
 
