--- a/bigquery.mdx
+++ b/bigquery.mdx
@@ -34,7 +34,20 @@ integration can be used as a [SQL source](/docs/sql).
 from chalk.sql import BigQuerySource
 
 bq = BigQuerySource()
+```
 
+You can then use [SQL file resolvers](/docs/sql-resolvers) to query your database:
+
+```sql
+-- type: online
+-- resolves: User
+-- source: bigquery
+SELECT id, name, email FROM users
+```
+
+Or use the source directly in Python resolvers:
+
+```py
 @online
 def fn(...) -> ...:
     return bq.query(...).first()
