--- a/mysql.mdx
+++ b/mysql.mdx
@@ -34,7 +34,20 @@ to construct the source in your code.
 from chalk.sql import MySQLSource
 
 mysql = MySQLSource()
+```
 
+You can then use [SQL file resolvers](/docs/sql-resolvers) to query your database:
+
+```sql
+-- type: online
+-- resolves: User
+-- source: mysql
+SELECT id, name, email FROM users
+```
+
+Or use the source directly in Python resolvers:
+
+```py
 @online
 def fn(...) -> ...:
     return mysql.query(...).first()
@@ -49,7 +62,20 @@ from chalk.sql import MySQLSource
 
 risk = MySQLSource(name="**RISK**")
 marketing = MySQLSource(name="**MARKETING**")
+```
 
+Then reference them in [SQL file resolvers](/docs/sql-resolvers) using the `name` parameter:
+
+```sql
+-- type: online
+-- resolves: User
+-- source: RISK
+SELECT id, credit_score FROM users
+```
+
+Or in Python resolvers:
+
+```py
 @online
 def risk_resolver(...) -> ...:
     return risk.query(...).first()
