--- a/snowflake.mdx
+++ b/snowflake.mdx
@@ -35,7 +35,20 @@ to construct the source in your code.
 from chalk.sql import SnowflakeSource
 
 snowflake = SnowflakeSource()
+```
 
+You can then use [SQL file resolvers](/docs/sql-resolvers) to query your database:
+
+```sql
+-- type: online
+-- resolves: User
+-- source: snowflake
+SELECT id, name, email FROM users
+```
+
+Or use the source directly in Python resolvers:
+
+```py
 @online
 def fn(...) -> ...:
     return snowflake.query(...).first()
@@ -51,7 +64,20 @@ from chalk.sql import SnowflakeSource
 
 risk = SnowflakeSource(name="**RISK**")
 marketing = SnowflakeSource(name="**MARKETING**")
+```
 
+Then reference them in [SQL file resolvers](/docs/sql-resolvers) using the `name` parameter:
+
+```sql
+-- type: online
+-- resolves: User
+-- source: RISK
+SELECT id, credit_score FROM users
+```
+
+Or in Python resolvers:
+
+```py
 @online
 def risk_resolver(...) -> ...:
     return risk.query(...).first()
