removing pg online store references

--- a/architecture.mdx
+++ b/architecture.mdx
@@ -246,7 +246,7 @@ trivial to integrate new data sources from other teams, dramatically increasing 
 accuracy and the context available to your models.
 
 Your systems can also bidirectionally integrate with Chalk's underlying infrastructure, which
-is built on widely-adopted technologies like Redis, DynamoDB, or Postgres and leverages open
+is built on widely-adopted technologies like Redis or DynamoDB, and leverages open
 standards like Arrow, Parquet, and Iceberg—ultimately maximizing compatibility and unlocking
 downstream analytical workflows
 
