--- a/faq.mdx
+++ b/faq.mdx
@@ -22,7 +22,7 @@ and we will be happy to help!
 ### What is the difference between the online store and the offline store?
 
 The online store is intended to store features for low-latency retrieval in online query.
-Typically, the online store is implemented using Redis, DynamoDB, or (in some cases) Postgres.
+Typically, the online store is implemented using Redis or DynamoDB.
 
 The offline store is intended to store historical logs of all previously ingested or computed
 features. It is used to compute large historical training sets. It is typically implemented using
