--- a/integrations.mdx
+++ b/integrations.mdx
@@ -42,7 +42,7 @@ Adding a new SQL source is as simple as providing a connection string and a few 
 Chalk dashboard.
 Once it's been added to your Chalk deployment, you can start querying it right away with [SQL Resolvers.](/docs/sql-resolvers)
 
-```
+```sql
 -- resolves: User
 -- source: postgres
 select
@@ -54,7 +54,7 @@ from users
 The features in a feature class can be hydrated from multiple SQL sources--we can pull a user's social security number
 from a different database that has stricter access controls.
 
-```
+```sql
 -- resolves: User
 -- source: restricted_postgres
 select
