--- a/integrations.mdx
+++ b/integrations.mdx
@@ -280,5 +280,5 @@ Chalk eliminates the complexity of building and maintaining production machine l
 Whether you're pulling user data from PostgreSQL, processing real-time events from Kafka, caching expensive feature
 computations in Redis, or extracting features from unstructured data with LLM's-—Chalk's unified platform handles it all.
 
-The result? **Faster time to production**, **lower operational overhead**, and **consistent feature logic** across your
+The result? Faster time to production, lower operational overhead, and consistent feature logic across your
 entire ML stack.
